# xenario

./: .env.desktop  .env.web  .env.xr  .gitignore  PLAN.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.scripts.json  vite.config.ts
.claude/: settings.local.json
public/scenes/: manifest.json
public/scenes/optimized/: scene_1.meta.json  scene_2.meta.json  scene_3.meta.json  scene_4.meta.json  scene_5.meta.json  scene_6.meta.json  scene_7.meta.json  scene_8.meta.json  scene_9.meta.json
scripts/: preprocess.ts
scripts/lib/: compositer.ts  downsampler.ts  logger.ts  pathGenerator.ts  plyParser.ts  plyWriter.ts  spatialAnalyzer.ts  tourStitcher.ts  types.ts  vec3.ts
src/: App.css  App.tsx  index.css  main.tsx  platform.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ExperiencePlayer.tsx  HUD.tsx  LoadScreen.tsx  LoadingScreen.tsx
src/modules/: InputManager.ts  LimitedLookController.ts  PointCloudAsset.ts  PointCloudRenderer.ts  RailCamera.ts  SceneTransition.ts  TourCamera.ts
src/shaders/: pointCloud.frag.glsl  pointCloud.vert.glsl
